[gd_scene load_steps=3 format=3 uid="uid://b75oppuidgsyh"]

[ext_resource type="Script" uid="uid://mqaix6s2iqkt" path="res://scripts/core/main_menu.gd" id="1_i04j1"]
[ext_resource type="Script" uid="uid://vd264qdqn71i" path="res://scripts/core/settings_menu.gd" id="2_xgk8r"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i04j1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Game Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "The Best Damn Game Ever"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit Game"

[node name="SettingsPopup" type="Panel" parent="."]
layout_mode = 1
offset_left = -550.0
offset_top = -300.0
offset_right = -330.0
offset_bottom = -100.0
script = ExtResource("2_xgk8r")

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsPopup"]
layout_mode = 1
offset_right = 143.0
offset_bottom = 184.0

[node name="TitleLabel" type="Label" parent="SettingsPopup/VBoxContainer"]
layout_mode = 2
text = "Settings"
horizontal_alignment = 1

[node name="SFXRow" type="HBoxContainer" parent="SettingsPopup/VBoxContainer"]
layout_mode = 2

[node name="SFXLabel" type="Label" parent="SettingsPopup/VBoxContainer/SFXRow"]
layout_mode = 2
text = "SFX Volume"

[node name="SFXSlider" type="HSlider" parent="SettingsPopup/VBoxContainer/SFXRow"]
custom_minimum_size = Vector2(90, 30)
layout_mode = 2

[node name="MusicRow" type="HBoxContainer" parent="SettingsPopup/VBoxContainer"]
layout_mode = 2

[node name="MusicLabel" type="Label" parent="SettingsPopup/VBoxContainer/MusicRow"]
layout_mode = 2
text = "Music Volume"

[node name="MusicSlider" type="HSlider" parent="SettingsPopup/VBoxContainer/MusicRow"]
custom_minimum_size = Vector2(90, 30)
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.25

[node name="ResolutionLabel" type="Label" parent="SettingsPopup/VBoxContainer"]
layout_mode = 2
text = "Resolution"

[node name="ResolutionDropdown" type="OptionButton" parent="SettingsPopup/VBoxContainer"]
layout_mode = 2

[node name="Spacer" type="Control" parent="SettingsPopup/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CloseButton" type="Button" parent="SettingsPopup/VBoxContainer"]
layout_mode = 2
text = "Close"
